# CS50W-Capstone

./: Makefile  README.md  fixtures.json  notes.md  pyproject.toml
backend/: manage.py  requirements.txt
backend/account/: urls.py  views.py
backend/accounts/: views.py
backend/portfolio/: apps.py  serializers.py  urls.py
backend/portfolio/migrations/: 0002_alter_technology_color_alter_technology_name.py  0005_delete_user.py
backend/portfolio/models/: post.py  project.py  technology.py
backend/portfolio/serializers/: post.py  project.py
backend/portfolio/views/: post.py  project.py
backend/project/: asgi.py  settings.py  urls.py  wsgi.py
capstone/: settings.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: index.jsx
frontend/src/components/: Avatar.jsx  Content.jsx  Footer.jsx  GalleryHeader.jsx  GradientText.jsx  Header.jsx  Intro.jsx  Navbar.jsx  PageTitle.jsx  Pagination.jsx  PostCard.jsx  PostGallery.jsx  PostHeader.jsx  PostsRecent.jsx  ProjectCard.jsx  ProjectGallery.jsx  ProjectHeader.jsx  ProjectsRecent.jsx  Section.jsx  SocMedIcons.jsx  Tags.jsx
frontend/src/pages/: App.jsx  Post.jsx  Posts.jsx  Project.jsx  Projects.jsx
portfolio/: admin.py  models.py  serializers.py  urls.py  views.py
portfolio/fixtures/: fixtures.json
portfolio/migrations/: 0001_initial.py  0003_rename_technology_stacks_project_stacks.py  0004_alter_technology_name.py
portfolio/models/: __init__.py  post.py  project.py
